PCSMOD-36: Make PCS not creating obs group for concepts with ids 1238 & 1284 (Fixes a bug)